# VideoScriptSkill

./: .gitignore  .mcp.json  INSTALL.md  README.md  REQUIREMENTS.md  cc.bat  config.example.json  manifest.json  pyproject.toml  start-voice.ps1  voice_server.bat
.claude/: settings.local.json
scripts/: install.sh
server/: __init__.py  config.py  logging_config.py  server.py
server/engine/: __init__.py  asr.py  correct.py  download.py  engine.py  merge.py  slice.py  whisper_asr.py
tests/: __init__.py  conftest.py  test2_transcript.md  test_asr_mock.py  test_correct.py  test_engine.py  test_transcript.md  test_whisper_asr.py
transcribe/: manifest.json  prompt.md
